--- a/css/style.css
+++ b/css/style.css
@@ -6772,11 +6772,17 @@ font-size: 16px;
     margin-top: 75px !important;
 }
 
-@media only screen and (max-width: 1020px) {
 
-    .jobUpperSpace,
-    .aboutUpper {
-        margin-top: 0px !important;
+@media only screen and (max-width: 1020px) {
+    
+    .chooseUs {
+        padding: 0px !important;
+    }
+}
+
+@media only screen and (max-width: 768px){
+	.colTopMargin{
+        padding-top: 24px !important
     }
 }
 
